--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Josefin+Sans&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+    letter-spacing: 1px;
+    font-family: 'Great Vibes', cursive;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+
+html::-webkit-scrollbar {
+    display: none;
+}
