--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.app { height: 100dvh; display: flex; gap: 1rem; }
+.app { height: 100%; width: 100vw; display: flex; }
 
 :root {
     --primary: #00ABE4;
@@ -9,4 +9,4 @@
 .text-secondary { color: var(--secondary) !important; }
 .btn-primary { color: var(#fff) !important; background-color: var(--primary) !important; }
 .btn-ghost { color: var(#fff) !important; background-color: transparent !important; border: 2px solid var(--primary) !important; }
-.btn-ghost:hover { background-color: var(--primary) !important; border: none !important; }
+.btn-ghost:hover { background-color: var(--primary) !important; color: #fff !important; }
