--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -6,6 +6,10 @@
     flex-direction: column;
     align-items: center;
     gap: 3rem;
+    transition: all 0.3s ease-in-out;
+    position: sticky;
+    top: 0;
+    z-index: 999;
 }
 
 .sidebar i {
@@ -64,5 +68,45 @@
     cursor: pointer;
     width: 100%;
     align-items: center;
+
+}
+
+@media (min-width: 769px) {
+    .sidebar i.fa-bars,
+    .sidebar i.fa-xmark {
+        display: none;
+    }
+
+}
+
+@media (max-width: 769px) {
+    .sidebar {
+        position: fixed;
+        height: 100%;
+        width: 60vw;
+        gap: 2rem;
+        z-index: 999;
+    }
+
+    .sidebar i.fa-bars,
+    .sidebar i.fa-xmark {
+        position: absolute;
+        right: -45px;
+        background-color: rgb(26, 26, 26);
+        font-size: 1.5rem;
+        padding: 15px;
+        border-radius: 15px;
+    }
+
+    .sidebar #logo,
+    .sidebar .profile i {
+        display: none;
+    }
+
+    .sidebar .profile {
+        margin-top: 1rem;
+        justify-content: center;
+        gap: 1rem;
+    }
 
 }
