--- a/client/src/components/toolbar/toolbar.css
+++ b/client/src/components/toolbar/toolbar.css
@@ -1,5 +1,14 @@
 .toolbar {
     width: 100%;
-    height: 5vh;
+    height: 8vh;
+    background-color: rgb(24, 24, 24);
     padding: 5px;
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width: 769px) {
+    .toolbar h1 {
+        margin-left: 3rem;
+    }
 }
