--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,3 +10,5 @@
 .btn-primary { color: var(#fff) !important; background-color: var(--primary) !important; }
 .btn-ghost { color: var(#fff) !important; background-color: transparent !important; border: 2px solid var(--primary) !important; }
 .btn-ghost:hover { background-color: var(--primary) !important; color: #fff !important; }
+
+.blur-bg { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); z-index: 998; display: flex; align-items: center; justify-content: center;}
