--- a/client/src/animation.css
+++ b/client/src/animation.css
@@ -58,3 +58,17 @@
   }
 }
 
+/* ========= Slide Down ============ */
+.slideDown {
+  animation: slideDown 0.5s ease-in-out forwards;
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+  }
+
+  to {
+    transform: translateY(0);
+  }
+}
