--- a/client/src/pages/form/UserForm/form.css
+++ b/client/src/pages/form/UserForm/form.css
@@ -78,3 +78,47 @@
 .form-rightSide button {
     width: 40%;
 }
+
+@media (max-width : 768px) {
+    .form-main {
+        width: 100%;
+        height: auto;
+    }
+    .form-body {
+        flex-direction: column;
+        align-items: center;
+        width: 100% !important;
+        gap: 2rem;
+    }
+
+    .form-leftSide {
+        width: 100% !important;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .slideLeft {
+        animation: none !important;
+    }
+
+    .form-leftSide h1 {
+        width: 90% !important;
+        font-size: 1.2rem !important;
+        font-weight: bold;
+    }
+
+    .form-leftSide img {
+        width: 70vw !important;
+    }
+
+    .form-rightSide {
+        width: 95% !important;
+        margin-bottom: 1rem;
+        height: 100% !important;
+    }
+
+    .form-rightSide h1 {
+        font-size: 1.5rem;
+    }
+}
