--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,3 +12,8 @@
 .btn-ghost:hover { background-color: var(--primary) !important; color: #fff !important; }
 
 .blur-bg { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); z-index: 998; display: flex; align-items: center; justify-content: center;}
+.modalContainer {border-radius: 12px; padding: 20px; background-color: #e5e5e5; position: relative;}
+.modalContainer .fa-xmark, .modalContainer .fa-circle-xmark {color: black; font-size: 20px; position: absolute; top: 10px; right: 10px;}
+.modalContainer h1, .modalContainer h2, .modalContainer h3, .modalContainer h4, .modalContainer h5, .modalContainer h6, .modalContainer p{color: black;}
+
+i, button{cursor: pointer;}
