--- a/client/src/components/toolbar/toolbar.css
+++ b/client/src/components/toolbar/toolbar.css
@@ -5,6 +5,11 @@
     padding: 5px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+.toolbar i {
+    cursor: pointer;
 }
 
 @media (max-width: 769px) {
