--- a/client/src/UI-Components/popUp-modal/modal.css
+++ b/client/src/UI-Components/popUp-modal/modal.css
@@ -1,5 +1,46 @@
-.modal {
+.modal-container {
     background-color: #fff;
-    padding: 20px;
-    border-radius: 25px;
+    padding: 10px;
+    border-radius: 18px;
+    max-width: 50vw;
+    max-height: 70vh;
+    min-width: 25vw;
+    min-height: 25vh;
 }
+
+.modal-container .modalHeader {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    background-color: var(--secondary);
+    border-radius: 11px;
+    padding: 7px;
+}
+
+.modalHeader i,
+.modalHeader .fa-xmark {
+    position: static !important;
+    color: #fff !important;
+    font-size: large;
+}
+
+.modalHeader h1 {
+    color: #fff;
+    font-size: large;
+    font-weight: bold;
+}
+
+.modal-container .modal-content {
+    width: 100%;
+    max-height: 50vh;
+    overflow-y: auto;
+    padding: 10px;
+    margin-top: 1rem;
+}
+
+.modal-container ::-webkit-scrollbar-thumb { 
+    background: #afafaf; border-radius: 10px;
+}
+
+.modal-container ::-webkit-scrollbar { width: 8px; }
