--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,16 @@
-.app { height: 100%; width: 100vw; display: flex; }
+.app { height: 100vh; width: 100vw; display: flex; }
+.app-container { max-height: 100vh; width: 100%; overflow-y: auto; overflow-x: hidden;}
 
 :root {
     --primary: #00ABE4;
     --secondary: #00C3E3;
+    --card: #1e1e1e;
 }
+
+::-webkit-scrollbar { width: 10px; }
+::-webkit-scrollbar-track { box-shadow: inset 0 0 5px grey; border-radius: 10px;}
+::-webkit-scrollbar-thumb { background: #5f5f5f; border-radius: 10px;}
+::-webkit-scrollbar-thumb:hover { background: var(--primary); }
 
 .text-primary { color: var(--primary) !important; }
 .text-secondary { color: var(--secondary) !important; }
