--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -1,3 +1,24 @@
+.toolbar {
+    height: 8vh;
+    background-color: rgb(24, 24, 24);
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+}
+
+.toolbar i {
+    cursor: pointer;
+}
+
+@media (max-width: 769px) {
+    .toolbar h1 {
+        margin-left: 3rem;
+    }
+}
+
 .sidebar {
     height: 100dvh;
     width: 18vw;
