added profile modal

--- a/client/src/UI-Components/popUp-modal/modal.css
+++ b/client/src/UI-Components/popUp-modal/modal.css
@@ -45,6 +45,14 @@
 
 .modal-container ::-webkit-scrollbar { width: 8px; }
 
+.modal-container .modal-footer {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 1rem;
+    gap: 0.6rem;
+}
+
 @media (max-width: 768px) {
     .modal-container {
         height: auto;
