--- a/client/src/pages/form/UserForm/form.css
+++ b/client/src/pages/form/UserForm/form.css
@@ -4,6 +4,10 @@
     position: relative;
 }
 
+.app-container {
+    margin-top: 0px !important;
+}
+
 .form-main::before {
     content: "";
     position: absolute;
