--- a/client/src/pages/root/home/home.css
+++ b/client/src/pages/root/home/home.css
@@ -3,6 +3,10 @@
     height: 100%;
 }
 
+.app-container {
+    margin-top: 0px !important;
+}
+
 .home nav img {
     width: 15vw;
     cursor: pointer;
