--- a/client/src/pages/form/UserForm/form.css
+++ b/client/src/pages/form/UserForm/form.css
@@ -4,6 +4,17 @@
     position: relative;
 }
 
+.form-main #home-icon {
+    position: absolute;
+    font-size: 1rem;
+    right: 10px;
+    top: 10px;
+    border: 2px solid gray;
+    padding: 10px;
+    border-radius: 25px;
+    z-index: 3;
+}
+
 .app-container {
     margin-top: 0px !important;
 }
@@ -86,7 +97,10 @@
 @media (max-width : 768px) {
     .form-main {
         width: 100%;
-        height: auto;
+        /* height: auto; */
+    }
+    .form-main #home-icon {
+        font-size: 0.8rem;
     }
     .form-body {
         flex-direction: column;
