--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -64,6 +64,7 @@
     justify-content: center;
     width: 100%;
     border-left: 1px solid gray;
+    margin-left: 15px;
 }
 
 .sidebar .menu-items .dropdown-container p {
