--- a/client/src/pages/people/people.css
+++ b/client/src/pages/people/people.css
@@ -59,6 +59,15 @@
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    position: relative;
+}
+
+.people .cards .card .card-body .fa-pencil {
+    color: gray;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: medium;
 }
 
 .people .cards .card .card-body img {
