added new animation

--- a/client/src/animation.css
+++ b/client/src/animation.css
@@ -72,3 +72,18 @@
     transform: translateY(0);
   }
 }
+
+/* ========= Slide Up ============ */
+.slideUp {
+  animation: slideUp 0.3s ease-in-out forwards;
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(100%);
+  }
+
+  to {
+    transform: translateY(0);
+  }
+}
