--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,10 @@
 html::-webkit-scrollbar {
     display: none;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
