--- a/client/src/UI-Components/popUp-modal/modal.css
+++ b/client/src/UI-Components/popUp-modal/modal.css
@@ -53,6 +53,18 @@
     gap: 0.6rem;
 }
 
+.modal-container .menu-footer {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    gap: 0.5rem;
+    min-height: 10vh;
+}
+
+.modal-container .menu-footer button {
+    min-width: 7vw;
+}
+
 @media (max-width: 768px) {
     .modal-container {
         height: auto;
