minor changes from update req css

--- a/client/src/pages/HR/UpdateRequest/style.css
+++ b/client/src/pages/HR/UpdateRequest/style.css
@@ -71,6 +71,10 @@ tbody tr:hover {
     background-color: var(--card);
 }
 
+tbody td {
+    min-width: 5vw;
+}
+
 tbody tr td:last-child {
     display: flex;
     align-items: center;
@@ -78,7 +82,7 @@ tbody tr td:last-child {
     position: relative;
 }
 
-tbody tr td i:first-child {
+tbody tr td i:nth-child(2) {
     color: #00ba00;
 }
 
