--- a/client/src/pages/form/UserForm/form.css
+++ b/client/src/pages/form/UserForm/form.css
@@ -15,6 +15,17 @@
     z-index: 3;
 }
 
+.form-main #header-btn {
+    position: absolute;
+    font-size: 0.8rem;
+    right: 70px;
+    top: 10px;
+    border: 2px solid gray;
+    padding: 10px;
+    border-radius: 25px;
+    z-index: 3;
+}
+
 .app-container {
     margin-top: 0px !important;
 }
@@ -94,7 +105,7 @@
     width: 40%;
 }
 
-@media (max-width : 768px) {
+@media (max-width: 768px) {
     .form-main {
         width: 100%;
         /* height: auto; */
