--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -9,8 +9,18 @@
     top: 0;
 }
 
-.toolbar i {
-    cursor: pointer;
+.toolbar #notification-count {
+    width: auto;
+    height: auto;
+}
+
+.toolbar span {
+    width: 30px;
+    height: 30px;
+}
+
+.toolbar button i {
+    font-size: 1rem;
 }
 
 @media (max-width: 769px) {
@@ -36,6 +46,8 @@
 .sidebar #logo {
     margin-top: -2rem;
     cursor: pointer;
+    height: 20vh;
+    margin-right: 3rem;
 }
 
 .sidebar i {
@@ -96,7 +108,14 @@
     cursor: pointer;
     width: 100%;
     align-items: center;
+    padding-left: 5px;
 
+}
+
+.sidebar #add-btn {
+    position: absolute;
+    bottom: 16px;
+    width: 85%;
 }
 
 @media (min-width: 769px) {
@@ -140,6 +159,10 @@
 
     .sidebar .profile-container {
         top: 0 !important;
+    }
+
+    .sidebar .menu-items {
+        margin-top: 1rem;
     }
 
 }
