--- a/client/src/pages/Attendance/ManageAttendance/style.css
+++ b/client/src/pages/Attendance/ManageAttendance/style.css
@@ -132,7 +132,7 @@
   border: 2px solid #343434;
   border-radius: 15px;
   padding: 15px;
-  width: 25vw;
+  width: 30vw;
   height: 55vh;
 }
 
@@ -154,12 +154,12 @@
 }
 
 .manage-attendance .stats .overall .progress-date {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 13px;
-    color: #b9b9b9;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 13px;
+  color: #b9b9b9;
 }
 
 .detailed-stat .daily-graph {
@@ -181,7 +181,7 @@
   font-weight: bold;
 }
 
-.manage-attendance .table h1{
+.manage-attendance .table h1 {
   width: 100%;
   color: var(--secondary);
   font-size: 16px;
@@ -253,4 +253,15 @@
 .manage-attendance .table-wrapper .header button {
   width: 10vw;
   height: 5vh;
+}
+
+.recharts-responsive-container {
+  height: 100% !important;
+  position: relative;
+}
+
+.daily-graph .recharts-responsive-container svg {
+  position: absolute;
+  top: -93px;
+  height: 215% !important;
 }
