--- a/client/src/pages/Notifications/style.css
+++ b/client/src/pages/Notifications/style.css
@@ -3,11 +3,87 @@
     z-index: 99;
     right: 2px;
     top: 60px;
+    width: 23vw;
 }
 
 .notification .custom-card {
-    min-height: 20vh;
+    min-height: 70vh;
     background-color: var(--card) !important;
     color: #fff !important;
     border: 2px solid var(--secondary);
+}
+
+.notification .notification-body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+    height: 100%;
+}
+
+.notification-body .header {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.notification-body .header h1:first-child {
+    font-size: 13px;
+}
+
+.notification-body .header h1:last-child {
+    color: #7aa9ff;
+    cursor: pointer;
+    font-size: 12px;
+}
+
+.notification-body .header h1:last-child:hover {
+    color: #5591ff;
+}
+
+.notification-body .switches {
+    display: flex;
+    width: 100%;
+    gap: 0.5rem;
+    justify-content: space-between;
+    border-bottom: 1px solid gray;
+    padding-bottom: 5px;
+}
+
+.notification-body .switches button {
+    font-size: 12px;
+    width: 95%;
+    padding: 5px;
+}
+
+.notification-body .main-content {
+    width: 100%;
+    height: 100%;
+}
+
+.notification-body .no-content img{
+    width: 10vw;
+}
+
+.notification-body .no-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    justify-content: center;
+}
+
+.notification-body .no-content h1 {
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.notification-body .no-content p {
+    font-size: 12px;
+    text-align: center;
+    width: 95%;
 }
