--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,5 @@
-.app { height: 100vh; width: 100vw; display: flex; }
+.app { height: 100vh; width: 100vw; display: flex;     background-image: url('./assets/images/wallpaper.jpg'); background-size: cover;
+ background-repeat: no-repeat; background-attachment: fixed; }
 .app-container { max-height: 100vh; width: 100%; overflow-y: auto; overflow-x: hidden;}
 
 :root {
