--- a/client/src/UI-Components/popUp-modal/modal.css
+++ b/client/src/UI-Components/popUp-modal/modal.css
@@ -1,5 +1,7 @@
 .modal-container {
-    background-color: #fff;
+    background-color: var(--card);
+    box-shadow: -1px 5px 25px var(--primary);
+    color: #fff;
     padding: 10px;
     border-radius: 18px;
     max-width: 50vw;
