--- a/client/src/pages/help-desk/helpDesk.css
+++ b/client/src/pages/help-desk/helpDesk.css
@@ -165,3 +165,50 @@
     position: absolute;
     top: 10px;
 }
+
+@media (max-width: 768px) {
+    .help-desk {
+        width: 100%;
+        height: auto;
+    }
+
+    .help-desk .header {
+        width: 100%;
+        padding-top: 20px;
+    }
+
+    .help-desk .header h1 {
+        font-size: 27px;
+    }
+
+    .help-desk .header .search {
+        width: 90%;
+    }
+
+    .help-desk .body .cards {
+        flex-direction: column;
+        width: 100%;
+        gap: 1rem;
+    }
+
+    .help-desk .body .cards .custom-card {
+        width: 90%;
+    }
+
+    .help-desk .ticket {
+        width: 90%;
+    }
+
+    .help-desk .ticket-card .header {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .help-desk .ticket-card .footer {
+        flex-direction: row;
+    }
+
+    .help-desk .ticket-card .footer button {
+        width: 45%;
+    }
+}
