--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -85,3 +85,28 @@
     width: 8vw;
     border-radius: 25px;
 }
+
+@media (max-width: 768px) {
+    .footer {
+        height: auto;
+        width: 100%;
+    }
+
+    .footer img {
+        display: none;
+    }
+
+    .footer .social {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .footer .subscribe {
+        width: 80%;
+        margin-bottom: 0;
+    }
+
+    .footer .subscribe button {
+        width: 40%;
+    }
+}
