--- a/client/src/pages/LeaveManagement/SubComponents/style.css
+++ b/client/src/pages/LeaveManagement/SubComponents/style.css
@@ -18,10 +18,27 @@
     border-radius: 15px;
 }
 
+.leave-req .modal-content .leave-form .dropdown span {
+    color: #fff;
+}
+
 .leave-req .modal-content .leave-form .item {
     display: flex;
-    align-items: center;
-    gap: 1rem;
+    align-items: flex-start;
+    gap: 0.5rem;
+    flex-direction: column;
+    font-size: 15px;
+}
+
+.leave-req .modal-content .leave-form .item .date-input {
+    background-color: #484848;
+    padding: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.leave-req .modal-content .leave-form .item label {
+    color: slategrey;
 }
 
 .leave-req .modal-content .leave-form .item #reason {
@@ -56,4 +73,66 @@
     align-items: center;
     width: 100%;
     justify-content: space-evenly;
+}
+
+.pending-history {
+    width: 50vw;
+}
+
+.pending-history .pending-history table {
+    border-collapse: collapse;
+    width: 100%;
+    height: 100%;
+}
+
+.pending-history table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.pending-history table tbody tr td {
+    color: #b9b9b9;
+}
+
+.pending-history td {
+    text-align: left;
+    padding: 8px 8px 8px 0px;
+}
+
+.pending-history tbody td {
+    min-width: 5vw;
+}
+
+.pending-history thead tr th,
+.pending-history tbody tr td {
+    text-align: left;
+    font-size: 14px;
+}
+
+.pending-history .table-wrapper .table {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.pending-history .table-wrapper thead {
+    position: sticky;
+    top: 0;
+    background-color: var(--card);
+}
+
+.pending-history table tbody td:last-child {
+    font-weight: bold;
+}
+
+.pending-history .table-wrapper {
+    display: flex;
+    min-height: 45vh;
+    max-height: 45vh;
+    overflow: auto;
+    justify-content: space-between;
+}
+
+.pending-history .table {
+    width: 100%;
 }
