added export file feature

--- a/client/src/pages/calendar/SubComponents/style.css
+++ b/client/src/pages/calendar/SubComponents/style.css
@@ -1,5 +1,10 @@
 .agenda-modal {
     width: 40vw;
+    overflow-x: hidden;
+}
+
+.agenda-modal .modal-content {
+    overflow-x: hidden;
 }
 
 .agenda-modal .modal-body {
