--- a/client/src/pages/Settings/SubComponents/AccountSettings/style.css
+++ b/client/src/pages/Settings/SubComponents/AccountSettings/style.css
@@ -23,7 +23,8 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
     background-color: #434343;
-    padding: 15px 10px;
+    padding: 10px 10px;
     border-radius: 12px;
 }
