--- a/client/src/pages/feeds/style.css
+++ b/client/src/pages/feeds/style.css
@@ -105,3 +105,59 @@
     border: 1px solid #c2c2c2;
     border-radius: 25px;
 }
+
+@media (max-width: 768px) {
+    .feeds {
+        height: auto;
+        width: 100%;
+    }
+
+    .feeds .posts-section {
+        width: 90%;
+    }
+
+    .feeds .posts-section .posts .post-icons .icon-items {
+        flex-direction: column;
+    }
+
+    .feeds .posts-section .posts i {
+        font-size: 20px !important;
+    }
+
+    .feeds .posts-section .posts p {
+        font-size: 12px;
+    }
+
+    .feeds .posts-section .posts .icon-items p {
+        display: none;
+    }
+
+    .feeds .new-post .first-logo {
+        width: 40px !important;
+        height: 30px;
+    }
+
+    .feeds .new-post .last-logo {
+        width: 50px !important;
+        height: 30px;
+    }
+
+    .feeds .new-post span .first-logo {
+        width: 30px;
+        height: 30px;
+    }
+
+    .feeds #new-post {
+        padding: 10px !important;
+    }
+
+    .feeds .posts-section .new-post input {
+        padding: 6px !important;
+        padding-left: 10px !important;
+        font-size: 12px;
+    }
+
+    .feeds .posts-section .new-post i {
+        font-size: 20px !important;
+    }
+}
