--- a/client/src/pages/Settings/style.css
+++ b/client/src/pages/Settings/style.css
@@ -2,7 +2,6 @@
     width: 100%;
     height: 86vh;
     display: flex;
-    /* align-items: center; */
     justify-content: center;
     gap: 1rem;
     padding-left: 10px;
@@ -46,4 +45,25 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+}
+
+@media (max-width: 768px) {
+    .settings {
+        height: auto;
+        width: 100%;
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .settings #left-card {
+        width: 98% !important;
+    }
+
+    .settings #right-card {
+        width: 98% !important;
+    }
+
+    .settings #right-card h3 {
+        width: 80%;
+    }
 }
