--- a/client/src/pages/tasks/style.css
+++ b/client/src/pages/tasks/style.css
@@ -17,6 +17,7 @@
     position: sticky;
     top: 0px;
     background-color: black;
+    z-index: 9999;
 }
 
 .tasks .all-tasks {
@@ -33,7 +34,7 @@
 }
 
 .all-tasks .custom-card {
-    height: 45vh;
+    height: 100%;
 }
 
 .tasks .task-container #stats-card {
@@ -53,10 +54,22 @@
         height: auto;
     }
 
+    .tasks .main-header {
+        display: none;
+    }
+
+    .tasks .task-header {
+        flex-direction: column;
+        gap: 1.3rem;
+        padding-top: 1rem;
+        padding-bottom: 2rem;
+    }
+
     .task-container {
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        margin-top: 0;
     }
 
     .tasks .all-tasks {
@@ -67,5 +80,13 @@
 
     .tasks .stats {
         width: 98% !important;
+    }
+
+    .tasks .task-container #stats-card {
+        width: 98%;
+    }
+
+    .tasks .task-container #user-stats {
+        width: 98%;
     }
 }
