--- a/client/src/UI-Components/Chip/style.css
+++ b/client/src/UI-Components/Chip/style.css
@@ -2,8 +2,8 @@
     padding: 5px;
     cursor: pointer;
     text-align: center;
-    width: fit-content;
-    min-width: 4vw;
+    max-width: fit-content;
+    min-width: 25%;
 }
 
 .chip p {
