--- a/client/src/UI-Components/popUp-modal/modal.css
+++ b/client/src/UI-Components/popUp-modal/modal.css
@@ -35,7 +35,7 @@
 
 .modal-container .modal-content {
     width: 100%;
-    max-height: 50vh;
+    /* max-height: 50vh; */
     overflow-y: auto;
     padding: 10px;
     margin-top: 1rem;
