--- a/client/src/pages/tasks/style.css
+++ b/client/src/pages/tasks/style.css
@@ -67,7 +67,7 @@
 
     .task-container {
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         gap: 1rem;
         margin-top: 0;
     }
