--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,10 @@ nav #logo {width: 15vw; cursor: pointer;}
 nav h1 {cursor: pointer;}
 button:disabled {cursor: not-allowed;}
 
+.btn-group button { border-radius: 0; border-right: 1px solid #575757;}
+.btn-group button:first-child { border-top-left-radius: 10px; border-bottom-left-radius: 10px;}
+.btn-group button:last-child { border-top-right-radius: 10px;border-bottom-right-radius: 10px; border-right: none;}
+
 @media (max-width: 768px) {
     nav #logo { width: 50vw;} 
 }
